--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="overflow-y: auto;">
         <h1>Login and Registration</h1>
         <form id="myForm">
             <fieldset>
